--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
-    "superagent": "^8.1.2",
-    "react-dnd": "^16.0.1"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "superagent": "^8.1.2"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.9.1",
